Parser: Refactor default state function to not take an intent since it's superfluous